# channel-generated-trailing-stop-loss-bot

./: .gitignore  LICENSE  README.md  STANDUP_01.txt  df_prices  environment.yml  fetch_data.py  getCandleSticks2ComputeBoll_4_own_response.py  getCandleSticks2MACD_2_own_response.py  getCandleSticks2RSI_2_own_response.py  lucit_license.ini  main.py  pyproject.toml  requirements.txt  tatsl.yml  trend_activated_bot_env.yml
_REMOTE_LOGIN/: ###Amazon Linux DANTE INSTALL and CONFIGURATION###.txt  AWS_Instructions.md  README.md  amazon_instance  instance_home
aws_remote_access/: RemoteGetFutureDataWithSpecificInterval_In_Seconds.py
pine_scripts/: macd_backtesting_pine.txt  rsi_backtesting_pine.txt
src/: BaseClass.py  BinanceHistoricalDataFetcher.py  BinanceManager.py  CoinPair.py  Config.py  Indicators.py  SSHClientSingleton.py  Strategy.py  TrailingStopLossActivation.py  UnicornBinanceTrailingStopLossEngine.py  helper001.py  pptGenerateForVisualization.py  printCandleBacktesting_BF3.py  printCandleBacktesting_BF7_may18.py
trend_activated_app/src/: Config.py  TrailingStopLossActivation.py
ws_consumer/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
ws_consumer/src/: server.py
