[tool.poetry]
name = "trend_activated_app"
version = "0.1.0"
description = ""
authors = ["UMB"]
readme = "README.md"
packages = [{include = "trend_activated_app"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
python-binance = "^1.0.16"
pandas = "^1.5.3"
shared-memory-dict = "^0.7.2"
ipython = "^8.10.0"
kafka-python = "^2.0.2"
confluent-kafka = "^2.0.2"
simple-websocket = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

