[tool.poetry]
name = "ws-consumer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ws_consumer"}]

[tool.poetry.dependencies]
python = "^3.11"
unicorn-binance-websocket-api = "^1.41.0"
python-socketio = "^5.7.2"
flask = "^2.2.2"
flask-socketio = "^5.3.2"
websocket-server = "^0.6.4"
simple-websocket = "^0.9.0"
uvicorn = "^0.20.0"
python-binance = "^1.0.16"
flask-restful = "^0.3.9"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
